@@ -5,6 +5,7 @@ Version: 1.2.1 [2012-09-27]
 o Now readDataFrame() for TabularTextFile defaults to read strings
   as characters rather than as factors.  To read strings as factors,
   just pass argument stringsAsFactors=TRUE.
+o Added readDataFrame() for TabularTextFileSet.
 
 
 Version: 1.2.0 [2012-09-25]
